# layershellqt-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
QtLayerShell/: __init__.py  _qlayershell.py
examples/: main.py
src/: QLayerShell.cpp  QLayerShell.h  bindings.h  bindings.xml
